--- a/.travis.yml
+++ b/.travis.yml
@@ -1,2 +1,5 @@
-after_deploy:
-  - curl "https://api.monkeytest.it/travis/test?secret=$MONKEY_KEY&on_load=true&on_click=true&page_weight=true&seo=true&broken_links=true&asset_count=true&url=https://splash.muazamkamal.com"
+// Using php as a language to avoid travis defaulting to ruby
+language: php
+
+script:
+  curl "https://api.monkeytest.it/travis/test?secret=$MONKEY_KEY&on_load=true&on_click=true&page_weight=true&seo=true&broken_links=true&asset_count=true&url=https://splash.muazamkamal.com"
