Fix parse failure(?)

--- a/.travis.yml
+++ b/.travis.yml
@@ -2,4 +2,4 @@
 language: php
 
 script:
-  curl "https://api.monkeytest.it/travis/test?secret=$MONKEY_KEY&on_load=true&on_click=true&page_weight=true&seo=true&broken_links=true&asset_count=true&url=https://splash.muazamkamal.com"
+  - curl "https://api.monkeytest.it/travis/test?secret=$MONKEY_KEY&on_load=true&on_click=true&page_weight=true&seo=true&broken_links=true&asset_count=true&url=https://splash.muazamkamal.com"
